--- a/perl6/doc/lib/Language/regexes.pod
+++ b/perl6/doc/lib/Language/regexes.pod
@@ -694,7 +694,7 @@ binary code.
 For example, the C<:ignorecase> (C<:i>) adverb tells the compiler to ignore
 the distinction between upper case, lower case and title case letters.
 
-So C<'a' ~~~ /A/> is false, but C<'a' ~~ /:i A/> is a successful match.
+So C<'a' ~~ /A/> is false, but C<'a' ~~ /:i A/> is a successful match.
 
 Regex adverbs can come before or inside a regex declaration and only affect
 the part of the regex that comes afterwards, lexically.
