--- a/perl6/doc/lib/Language/traps.pod
+++ b/perl6/doc/lib/Language/traps.pod
@@ -43,7 +43,7 @@ For example
 
 dies with
 
-    Cannot mofify an immutable Int
+    Cannot modify an immutable Int
 
 in the first line marked with C<# WRONG>, because C<$.x>, short for C<$(
 self.x )>, is a call to a read-only accessor.
