--- a/perl6/doc/lib/Type/Iterator.pod
+++ b/perl6/doc/lib/Type/Iterator.pod
@@ -16,10 +16,14 @@ Iterators generally only allow one iteration over the sequence; afterwards
 they are exhausted.
 
 The main API is the C<pull-one> method, which either returns the next value,
-or the special value C<IterationEnd> if no more elements are available. Each
+or the sentinel value C<IterationEnd> if no more elements are available. Each
 class implementing C<Iterator> must provide a C<pull-one> method. All other
 Iterator API methods can be implemented in terms of C<pull-one>, but also
 overriden for performance reasons.
+
+Note: The only valid use of the sentinel value C<IterationEnd> in a program
+is identity comparison (using C<=:=>) with the result of a method in the
+iterator API. Any other behavior is undefined and implementation dependent.
 
 =head1 Methods
 
