git subrepo clone --force git://github.com/tadzik/perl6-Acme-Meow.git tadzik/perl6-Acme-Meow
subrepo:
  subdir:   "tadzik/perl6-Acme-Meow"
  merged:   "2d7b794"
upstream:
  origin:   "git://github.com/tadzik/perl6-Acme-Meow.git"
  branch:   "master"
  commit:   "2d7b794"
git-subrepo:
  version:  "0.2.2"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "436d7b7"

--- a/tadzik/perl6-Acme-Meow/README
+++ b/tadzik/perl6-Acme-Meow/README
@@ -1,6 +1,6 @@
-It's the port of Perl 5's Acme::Meow [1]
+This is a Perl 6 port of Perl 5's Acme::Meow [1]
 
-It's not the verbatim port, some things have changed,
-and there are more to come. Stay tuned for more fun :)
+It's not a verbatim port. Some things have changed,
+and there is more to come. Stay tuned for more fun :)
 
-[1] http://search.cpan.org/~foolish/Acme-Meow-0.01/lib/Acme/Meow.pm
+[1] http://metacpan.org/pod/Acme::Meow
